# cogrs

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  devbox.json  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
callbacks/minimal/: Cargo.toml
cogrs/: Cargo.toml
cogrs-callbacks/: Cargo.toml
cogrs-callbacks/src/: lib.rs
cogrs-core/: Cargo.toml
cogrs-core/src/: adhoc.rs  cli.rs  constants.rs  executor.rs  inventory.rs  lib.rs  parsing.rs  play.rs  playbook.rs  strategy.rs  task_queue_manager.rs  template.rs  utils.rs  vars.rs  vault.rs
cogrs-core/src/config/: base.yaml  manager.rs
cogrs-core/src/executor/: failed_state.rs  host_state.rs  play_iterator.rs  task_executor.rs  task_queue_manager.rs  task_result.rs  worker_message.rs
cogrs-core/src/inventory/: group.rs  host.rs  manager.rs  yml.rs
cogrs-core/src/parsing/: parser.rs  yml.rs
cogrs-core/src/playbook/: block.rs  handler.rs  play.rs  play_builder.rs  play_context.rs  role.rs  task.rs
cogrs-core/src/strategy/: linear.rs
cogrs-core/src/vars/: manager.rs  variable.rs
cogrs-core/tests/: manager.rs
cogrs-core/tests/inventory/: basic.yaml  limit_hosts.txt
cogrs-modules/: Cargo.toml
cogrs-modules/src/: action_handler.rs  cli.rs  framework.rs  lib.rs  task_result.rs
cogrs-plugins/: Cargo.toml
cogrs-plugins/src/: callback.rs  connection.rs  lib.rs  plugin_loader.rs  plugin_type.rs  shell.rs
cogrs-schema/: Cargo.toml
cogrs-schema/src/: schema.rs  validation.rs
cogrs/src/: cli.rs  lib.rs  main.rs
cogrs/src/inventory/: host.rs  manager.rs
cogrs/src/vault/: aes256.rs
cogrs/tests/: manager.rs
common/: Cargo.toml
common/src/: lib.rs  validation.rs
modules/command/: Cargo.toml
modules/command/src/: main.rs
plugins/callback/minimal/: Cargo.toml
plugins/callback/minimal/src/: lib.rs
plugins/connection/ssh/: Cargo.toml
plugins/connection/ssh-dylib/: Cargo.toml
plugins/connection/ssh-dylib/src/: lib.rs
plugins/connection/ssh-lib/: Cargo.toml
plugins/connection/ssh-lib/src/: lib.rs
plugins/connection/ssh/src/: lib.rs
plugins/shell/sh/: Cargo.toml
plugins/shell/sh-dylib/: Cargo.toml
plugins/shell/sh-dylib/src/: lib.rs
plugins/shell/sh-lib/: Cargo.toml
plugins/shell/sh-lib/src/: lib.rs
plugins/shell/sh/src/: lib.rs
src/: cli.rs  constants.rs  inventory.rs  lib.rs  main.rs  modules.rs  playbook.rs  shell.rs  ssh.rs  vault.rs
src/inventory/: group.rs  host.rs  manager.rs  parser.rs  patterns.rs  utils.rs  vars.rs  yml.rs
src/vault/: aes256.rs
tests/: manager.rs
tests/inventory/: basic_relationships.yaml
