[workspace]
resolver = "2"

members = [
    "cogrs",
    "cogrs-plugins",
    "cogrs-core",
    "cogrs-schema",
    "cogrs-modules",
    "modules/command",
    "plugins/callback/minimal",
    "plugins/connection/ssh-lib",
    "plugins/connection/ssh-dylib",
    "plugins/shell/sh-lib",
    "plugins/shell/sh-dylib",
]
