[package]
name = "cogrs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
regex = "1.11.1"
sha2 = "0.11.0-pre.4"
hmac = "0.13.0-pre.4"
thiserror = "2.0.11"
zeroize = "1.8.1"
indexmap = "2.7.1"
rand = "0.9.0"
ring = "0.17.8"
aes = "0.9.0-pre.2"
ctr = "0.10.0-pre.2"
cipher = "0.5.0-pre.7"
serde_yaml = "0.9.34"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
cogrs-plugins = { path = "../cogrs-plugins" }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
libloading = "0.8.6"
once_cell = "1.20.3"
minijinja = "2.7.0"
mac_address = "1.1.8"
dirs = "6.0.0"


[dev-dependencies]
rstest = "0.24.0"
