[package]
name = "cogrs-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
once_cell = "1.20.3"
libloading = "0.8.6"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
indexmap = "2.7.1"
cogrs-schema = { path = "../cogrs-schema" }
log = "0.4.26"
rand = "0.9.0"
shlex = "1.3.0"
regex = "1.11.1"
async-trait = "0.1.86"
semver = "1.0.25"
