[package]
name = "cogrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
cogrs-core = { path = "../cogrs-core" }

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.15.0"

[build-dependencies]
chrono = "0.4.39"
