[package]
name = "ssh-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cogrs-schema = { path = "../../../cogrs-schema" }
cogrs-plugins = { path = "../../../cogrs-plugins" }
anyhow = "1.0.95"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
openssh = "0.11.5"
async-trait = "0.1.86"
